--- a/Exercicio1.2
+++ b/Exercicio1.2
@@ -1,1 +1,35 @@
-oioioio
+<%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
+<!DOCTYPE html>
+<html>
+<head>
+
+</head>
+<body>
+    <h1> Conversão de Temperaturas</h1>
+    <%
+    String Fahrenheit = request.getParameter("Fahrenheit");
+    int fah = Integer.parseInt(Fahrenheit);
+    
+    String celsius = request.getParameter("Celsius");
+    int cel = Integer.parseInt(celsius);
+    
+    out.print(celsiusToFahrenheit(cel));
+    %>
+    
+    
+    <%!
+        double celsiusToFahrenheit(double celsius) {
+            return (9.0 / 5.0) * celsius + 32;
+        }
+    %>
+   
+        
+
+      
+             
+
+    
+    
+</body>
+</html>
+
